new images added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ http://www.templatemo.com/tm-498-stimulus
           <div class="row">
 
                <div class="col-md-6 col-sm-6">
-                    <div class="home-img"></div>
+                    <div class="home-img-1"></div>
                </div>
 
                <div class="col-md-6 col-sm-6">
@@ -113,7 +113,7 @@ http://www.templatemo.com/tm-498-stimulus
                </div>
 
                <div class="col-md-3 col-sm-6">
-                    <div class="background-image about-img"></div>
+                    <div class="background-image run-img"></div>
                </div>
 
                <div class="bg-yellow col-md-3 col-sm-6">
@@ -336,7 +336,7 @@ http://www.templatemo.com/tm-498-stimulus
                </div>
 
                <div class="col-md-3 col-sm-6">
-                    <div class="background-image contact-img"></div>
+                    <div class="background-image vr-img"></div>
                </div>
 
                <div class="bg-dark col-md-3 col-sm-6">
